# ImGui-Unity-With-Layout

./: README.md  build.gradle  local.properties  settings.gradle
.github/workflows/: cmake.yml  cmake2.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Unity.h  Utils.h  native-lib.cpp
app/src/main/java/com/unity/imgui/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
